<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">QuizApp</string>
    <string name="about">About</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="pranshu_sharma">Pranshu Sharma</string>
    <string name="kartikpc9628_gmail_com">kartikpc9628@gmail.com</string>
    <string name="devcomm">DevComm.</string>
    <string name="bobby902619_gmail_com">bobby902619@gmail.com</string>
    <string name="developer">Developer</string>
    <string name="back">Back</string>
    <string name="developer_picture">Developer Picture</string>
    <string name="developer_community_pic">Developer Community Pic</string>
</resources>